Styled particles.js div, fixed z-indexs on all components

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header .menu-btn:hover {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 10001;
   top: 0;
   left: 0;
   background-color: var(--color-dark);
@@ -102,6 +102,13 @@ header .menu-btn:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 100;
+}
+
+#particles-js {
+  position: absolute;
+  height: 80vh;
+  width: 100%;
 }
 
 .showcase-text h1 {
@@ -166,7 +173,7 @@ header .menu-btn:hover {
 /* LAB-WORK AREA */
 
 .lab-work .lab-item {
-  background-color: var(--color-blue-primary);
+  background-color: var(--color-orange-primary);
   height: 350px;
   position: relative;
 }
@@ -181,12 +188,11 @@ header .menu-btn:hover {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: var(--color-blue-primary);
   overflow: hidden;
   width: 100%;
   height: 0;
   transition: 0.5s;
-  opacity: 0.7;
 }
 
 .lab-item:hover .lab-overlay {
@@ -243,7 +249,7 @@ header .menu-btn:hover {
   width: 100%;
   height: 100%;
   overflow: auto;
-  z-index: 100;
+  z-index: 2000;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
